# sora2-network

bridge-scripts/: run-substrate-relay.sh
common/: Cargo.toml
common/src/: lib.rs
pallets/trustless-bridge/bridge-channel-rpc/: Cargo.toml
pallets/trustless-bridge/bridge-inbound-channel/: Cargo.toml
pallets/trustless-bridge/bridge-inbound-channel/src/: lib.rs  test.rs
pallets/trustless-bridge/bridge-outbound-channel/: Cargo.toml
pallets/trustless-bridge/bridge-outbound-channel/src/: benchmarking.rs  lib.rs  test.rs
pallets/trustless-bridge/ethereum-light-client/: Cargo.toml
pallets/trustless-eth-bridge/channel/inbound/: Cargo.toml
pallets/trustless-eth-bridge/channel/inbound/src/: events.rs  lib.rs  test.rs
pallets/trustless-eth-bridge/channel/outbound/: Cargo.toml
pallets/trustless-eth-bridge/channel/outbound/src/: test.rs
pallets/trustless-eth-bridge/channel/rpc/: Cargo.toml
pallets/trustless-eth-bridge/ethereum-light-client/: Cargo.toml
